--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,31 +1,39 @@
-brew "zsh"
-brew "terminator"
+tap "homebrew/core"
+tap "homebrew/bundle"
+tap "homebrew/cask"
+tap "buo/cask-upgrade"
+tap "homebrew/cask-fonts"
+tap "qmk/qmk"
 brew "bat"
-brew "fzf"
-brew "node"
-brew "fnm"
-brew "fd"
 brew "exa"
+brew "fd"
+brew "fnm"
+brew "fzf"
 brew "harfbuzz"
-brew "pango"
 brew "nginx"
+brew "node"
+brew "nvm"
+brew "pango"
+brew "qmk/qmk/qmk"
+brew "starship"
 brew "telnet"
 brew "vte3"
 brew "wget"
 brew "yarn"
-
+brew "terminator"
+brew "zsh"
 cask "authy"
-cask "vlc"
-cask "calibre"
-cask "slack"
-cask "spotify"
-cask "visual-studio-code"
 cask "brave-browser"
-cask "gimp"
-cask "webstorm"
-cask "figma"
-cask "steam"
+cask "calibre"
 cask "discord"
 cask "docker"
+cask "figma"
 cask "freecad"
+cask "gimp"
+cask "slack"
+cask "spotify"
+cask "steam"
 cask "ultimaker-cura"
+cask "visual-studio-code"
+cask "vlc"
+cask "webstorm"
