--- a/zsh/starship.toml
+++ b/zsh/starship.toml
@@ -10,10 +10,6 @@ $line_break\
 $python\
 $character"""
 
-[directory]
-truncate_to_repo=false
-style = "bold blue"
-
 # Replace the "❯" symbol in the prompt with "➜"
 [character]                            # The name of the module we are configuring is "character"
 success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
@@ -23,16 +19,20 @@ error_symbol = "[✗](bold red)"
 [git_branch]
 format = "[$branch]($style)"
 
+#[git_status]
+#format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+#style = "cyan"
+#conflicted = "​"
+#untracked = "​"
+#modified = "​"
+#staged = "​"
+#renamed = "​"
+#deleted = "​"
+#stashed = "≡"
+
 [git_status]
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+format = '( [\[$all_status$ahead_behind\]]($style) )'
 style = "cyan"
-conflicted = "​"
-untracked = "​"
-modified = "​"
-staged = "​"
-renamed = "​"
-deleted = "​"
-stashed = "≡"
 
 [git_state]
 format = '\([$state( $progress_current/$progress_total)]($style)\) '
