--- a/zsh/starship.toml
+++ b/zsh/starship.toml
@@ -15,24 +15,20 @@ $character"""
 success_symbol = "[➜](bold green)"     # The "success_symbol" segment is being set to "➜" with the color "bold green"
 error_symbol = "[✗](bold red)"
 
-
 [git_branch]
 format = "[$branch]($style)"
-
-#[git_status]
-#format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
-#style = "cyan"
-#conflicted = "​"
-#untracked = "​"
-#modified = "​"
-#staged = "​"
-#renamed = "​"
-#deleted = "​"
-#stashed = "≡"
+style = "bright-black"
 
 [git_status]
-format = '( [\[$all_status$ahead_behind\]]($style) )'
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
 style = "cyan"
+conflicted = "​"
+untracked = "​"
+modified = "​"
+staged = "​"
+renamed = "​"
+deleted = "​"
+stashed = "≡"
 
 [git_state]
 format = '\([$state( $progress_current/$progress_total)]($style)\) '
