--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -15,13 +15,13 @@ brew "node"
 brew "nvm"
 brew "pango"
 brew "qmk/qmk/qmk"
-brew "starship"
+brew "pure"
+brew "zsh"
 brew "telnet"
 brew "vte3"
 brew "wget"
 brew "yarn"
 brew "terminator"
-brew "zsh"
 cask "authy"
 cask "brave-browser"
 cask "calibre"
