Add yarn aliases

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -5,7 +5,7 @@ tap "buo/cask-upgrade"
 tap "homebrew/cask-fonts"
 tap "qmk/qmk"
 brew "bat"
-brew "exa"
+brew "eza"
 brew "fd"
 brew "fnm"
 brew "fzf"
