--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,40 +1,79 @@
-tap "homebrew/core"
+tap "derailed/k9s"
 tap "homebrew/bundle"
-tap "homebrew/cask"
-tap "buo/cask-upgrade"
-tap "homebrew/cask-fonts"
+tap "homebrew/cask-drivers"
+tap "homebrew/services"
+tap "osx-cross/arm"
+tap "osx-cross/avr"
+tap "oven-sh/bun"
 tap "qmk/qmk"
+brew "asdf"
 brew "bat"
+brew "envconsul"
 brew "eza"
 brew "fd"
+brew "harfbuzz"
+brew "pango"
 brew "fnm"
 brew "fzf"
-brew "harfbuzz"
+brew "kubectx"
+brew "kubernetes-cli@1.22"
+brew "kustomize"
+brew "mariadb-connector-c"
+brew "mysql", restart_service: true
+brew "neovim"
 brew "nginx"
-brew "node"
 brew "nvm"
-brew "pango"
-brew "qmk/qmk/qmk"
+brew "postgresql@14"
+brew "protobuf"
 brew "pure"
-brew "zsh"
+brew "redis"
+brew "scrcpy"
 brew "telnet"
+brew "tree"
 brew "vte3"
 brew "wget"
 brew "yarn"
-brew "terminator"
-cask "authy"
-cask "brave-browser"
+brew "zsh"
+brew "oven-sh/bun/bun"
+brew "qmk/qmk/qmk"
+cask "android-platform-tools"
+cask "bruno"
+cask "caffeine"
 cask "calibre"
-cask "discord"
-cask "docker"
-cask "figma"
-cask "freecad"
-cask "gimp"
-cask "slack"
-cask "spotify"
-cask "steam"
-cask "ultimaker-cura"
-cask "visual-studio-code"
-cask "vlc"
-cask "webstorm"
+cask "dbeaver-community"
 cask "qmk-toolbox"
+cask "raycast"
+cask "telegram"
+cask "vial"
+cask "warp"
+cask "zoom"
+vscode "aaron-bond.better-comments"
+vscode "adpyke.codesnap"
+vscode "christian-kohler.path-intellisense"
+vscode "dbaeumer.vscode-eslint"
+vscode "deque-systems.vscode-axe-linter"
+vscode "emmanuelbeziat.vscode-great-icons"
+vscode "esbenp.prettier-vscode"
+vscode "formulahendry.auto-rename-tag"
+vscode "huizhou.githd"
+vscode "ms-playwright.playwright"
+vscode "ms-python.debugpy"
+vscode "ms-python.isort"
+vscode "ms-python.python"
+vscode "ms-python.vscode-pylance"
+vscode "ms-toolsai.jupyter"
+vscode "ms-toolsai.jupyter-keymap"
+vscode "ms-toolsai.jupyter-renderers"
+vscode "ms-toolsai.vscode-jupyter-cell-tags"
+vscode "ms-toolsai.vscode-jupyter-slideshow"
+vscode "ms-vscode.cpptools"
+vscode "ms-vscode.makefile-tools"
+vscode "orta.vscode-jest"
+vscode "orta.vscode-twoslash-queries"
+vscode "pgourlain.erlang"
+vscode "pkief.material-icon-theme"
+vscode "simonsiefke.svg-preview"
+vscode "steoates.autoimport"
+vscode "webhint.vscode-webhint"
+vscode "wix.vscode-import-cost"
+vscode "yrm.type-challenges"
