--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -15,6 +15,7 @@ brew "harfbuzz"
 brew "pango"
 brew "fnm"
 brew "fzf"
+brew "just"
 brew "kubectx"
 brew "kubernetes-cli@1.22"
 brew "kustomize"
@@ -27,6 +28,7 @@ brew "postgresql@14"
 brew "protobuf"
 brew "pure"
 brew "redis"
+brew "ripgrep"
 brew "scrcpy"
 brew "telnet"
 brew "tree"
@@ -37,10 +39,12 @@ brew "zsh"
 brew "oven-sh/bun/bun"
 brew "qmk/qmk/qmk"
 cask "android-platform-tools"
+cask "anydesk"
 cask "bruno"
 cask "caffeine"
 cask "calibre"
 cask "dbeaver-community"
+cask "iterm2"
 cask "qmk-toolbox"
 cask "raycast"
 cask "telegram"
