Replace pure with starship

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -26,10 +26,10 @@ brew "nginx"
 brew "nvm"
 brew "postgresql@14"
 brew "protobuf"
-brew "pure"
 brew "redis"
 brew "ripgrep"
 brew "scrcpy"
+brew "starship"
 brew "telnet"
 brew "tree"
 brew "vte3"
@@ -74,7 +74,6 @@ vscode "ms-vscode.cpptools"
 vscode "ms-vscode.makefile-tools"
 vscode "orta.vscode-jest"
 vscode "orta.vscode-twoslash-queries"
-vscode "pgourlain.erlang"
 vscode "pkief.material-icon-theme"
 vscode "simonsiefke.svg-preview"
 vscode "steoates.autoimport"
