--- a/config/starship.toml
+++ b/config/starship.toml
@@ -67,13 +67,12 @@ format = '[$symbol$context]($style)'
 format = '[$symbol$branch]($style)'
 
 [git_branch]
-format = '[$symbol$branch]($style)'
-style = "white"
+format = "[$branch]($style)"
+style = "bright-black"
 
 [git_status]
-#format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218)($ahead_behind$stashed) ]($style)"
-format = ' [(*$conflicted$untracked$modified$staged$renamed$deleted)($ahead_behind$stashed)]($style) '
-style = "red"
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind$stashed)]($style)"
+style = "cyan"
 conflicted = "​"
 untracked = "​"
 modified = "​"
