update kitty config

--- a/config/kitty.conf
+++ b/config/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      FiraCode-Regular
-bold_font        normal
-italic_font      normal
-bold_italic_font normal
+font_family      JetBrainsMonoNL
+bold_font        auto
+italic_font      auto
+bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -19,12 +19,12 @@ bold_italic_font normal
 #: heavy. Setting them manually is useful for font families that have
 #: many weight variants like Book, Medium, Thick, etc. For example::
 
-font_family      FiraCode-Regular
+font_family      JetBrainsMonoNL
 # bold_font        FiraCode-Regular
 # italic_font      FiraCode-Regular
 # bold_italic_font FiraCode-Regular
 
-font_size 16.0
+font_size 15.0
 
 #: Font size (in pts).
 
@@ -158,8 +158,8 @@ font_size 16.0
 #: suffix px for pixels or % for percentage of original value. No
 #: suffix means use pts. For example::
 
-#:     modify_font underline_position -2
-#:     modify_font underline_thickness 150%
+# modify_font underline_position 5
+# modify_font underline_thickness 500%
 #:     modify_font strikethrough_position 2px
 
 #: Additionally, you can modify the size of the cell in which each
@@ -392,7 +392,7 @@ cursor_shape block
 #: much effort.
 
 url_color #0087BD
-# url_style curly
+url_style straight
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, straight, double, curly, dotted, dashed.
@@ -434,7 +434,7 @@ url_color #0087BD
 #: When the mouse hovers over a terminal hyperlink, show the actual
 #: URL that will be activated when the hyperlink is clicked.
 
-# underline_hyperlinks hover
+underline_hyperlinks hover
 
 #: Control how hyperlinks are underlined. They can either be
 #: underlined on mouse hover, always (i.e. permanently underlined) or
@@ -444,7 +444,7 @@ url_color #0087BD
 #: value to/from always will only affect text subsequently received by
 #: kitty.
 
-# copy_on_select no
+copy_on_select yes
 
 #: Copy to clipboard or a private buffer on select. With this set to
 #: clipboard, selecting text with the mouse will cause the text to be
@@ -796,7 +796,7 @@ enable_audio_bell no
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+enabled_layouts Tall, *
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -812,7 +812,7 @@ enable_audio_bell no
 #: start_resizing_window. The cells value is used for horizontal
 #: resizing, and the lines value is used for vertical resizing.
 
-# window_border_width 0.5pt
+window_border_width 1pt
 
 #: The width of window borders. Can be either in pixels (px) or pts
 #: (pt). Values in pts will be rounded to the nearest number of pixels
@@ -827,7 +827,7 @@ enable_audio_bell no
 #: that setting a non-zero window_margin_width overrides this and
 #: causes all borders to be drawn.
 
-# window_margin_width 0
+window_margin_width 6
 
 #: The window margin (in pts) (blank area outside the border). A
 #: single value sets all four sides. Two values set the vertical and
@@ -842,7 +842,7 @@ enable_audio_bell no
 #: set the vertical and horizontal sides. Three values set top,
 #: horizontal and bottom. Four values set top, right, bottom and left.
 
-# window_padding_width 0
+window_padding_width 3
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -866,12 +866,12 @@ enable_audio_bell no
 #: placed centrally. A value of top-left means the padding will be
 #: only at the bottom and right edges.
 
-# active_border_color #00ff00
+active_border_color #9AEDFE
 
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
-# inactive_border_color #cccccc
+inactive_border_color #282a36
 
 #: The color for the border of inactive windows.
 
@@ -1517,7 +1517,7 @@ editor nvim
 #: remote machine to read/write to the local filesystem, without
 #: permission.
 
-allow_hyperlinks yes
+# allow_hyperlinks yes
 
 #: Process hyperlink escape sequences (OSC 8). If disabled OSC 8
 #: escape sequences are ignored. Otherwise they become clickable
@@ -1761,7 +1761,7 @@ macos_titlebar_color background
 #: mouse cursor invisible on dual GPU machines. Changing this option
 #: by reloading the config is not supported.
 
-# macos_colorspace srgb
+macos_colorspace displayp3
 
 #: The colorspace in which to interpret terminal colors. The default
 #: of srgb will cause colors to match those seen in web browsers. The
@@ -1995,7 +1995,7 @@ macos_titlebar_color background
 #: New window
 
 # map kitty_mod+enter new_window
-# map cmd+enter       new_window
+map cmd+w       new_window
 
 #::  You can open a new kitty window running an arbitrary program, for
 #::  example::
@@ -2151,11 +2151,12 @@ map cmd+t       new_tab
 #: Close tab
 
 # map kitty_mod+q close_tab
-map cmd+w       close_tab
+map cmd+shift+t       close_tab
 
 #: Close OS window
 
 # map shift+cmd+w close_os_window
+map shift+cmd+w close_window
 
 #: Move tab forward
 
