--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -40,10 +40,12 @@ brew "oven-sh/bun/bun"
 brew "qmk/qmk/qmk"
 cask "android-platform-tools"
 cask "anydesk"
+cask "blender"
 cask "bruno"
 cask "caffeine"
 cask "calibre"
 cask "dbeaver-community"
+cask "discord"
 cask "iterm2"
 cask "qmk-toolbox"
 cask "raycast"
