--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -6,33 +6,27 @@ tap "osx-cross/arm"
 tap "osx-cross/avr"
 tap "oven-sh/bun"
 tap "qmk/qmk"
+brew "coreutils"
 brew "asdf"
 brew "bat"
-brew "envconsul"
+brew "curl"
 brew "eza"
 brew "fd"
 brew "harfbuzz"
 brew "pango"
-brew "fnm"
 brew "fzf"
-brew "just"
-brew "kubectx"
-brew "kubernetes-cli@1.22"
-brew "kustomize"
-brew "mariadb-connector-c"
-brew "mysql", restart_service: true
+brew "git"
+brew "mysql"
 brew "neovim"
 brew "nginx"
+brew "node"
 brew "nvm"
-brew "postgresql@14"
-brew "protobuf"
-brew "redis"
+brew "pnpm"
 brew "ripgrep"
 brew "scrcpy"
 brew "starship"
 brew "telnet"
 brew "tree"
-brew "vte3"
 brew "wget"
 brew "yarn"
 brew "zsh"
@@ -40,18 +34,13 @@ brew "oven-sh/bun/bun"
 brew "qmk/qmk/qmk"
 cask "android-platform-tools"
 cask "anydesk"
-cask "blender"
 cask "bruno"
-cask "caffeine"
 cask "calibre"
-cask "dbeaver-community"
 cask "discord"
-cask "iterm2"
 cask "qmk-toolbox"
 cask "raycast"
 cask "telegram"
 cask "vial"
-cask "warp"
 cask "zoom"
 vscode "aaron-bond.better-comments"
 vscode "adpyke.codesnap"
@@ -59,9 +48,9 @@ vscode "christian-kohler.path-intellisense"
 vscode "dbaeumer.vscode-eslint"
 vscode "deque-systems.vscode-axe-linter"
 vscode "emmanuelbeziat.vscode-great-icons"
+vscode "enkia.tokyo-night"
 vscode "esbenp.prettier-vscode"
 vscode "formulahendry.auto-rename-tag"
-vscode "huizhou.githd"
 vscode "ms-playwright.playwright"
 vscode "ms-python.debugpy"
 vscode "ms-python.isort"
@@ -74,11 +63,9 @@ vscode "ms-toolsai.vscode-jupyter-cell-tags"
 vscode "ms-toolsai.vscode-jupyter-slideshow"
 vscode "ms-vscode.cpptools"
 vscode "ms-vscode.makefile-tools"
-vscode "orta.vscode-jest"
 vscode "orta.vscode-twoslash-queries"
-vscode "pkief.material-icon-theme"
-vscode "simonsiefke.svg-preview"
 vscode "steoates.autoimport"
-vscode "webhint.vscode-webhint"
+vscode "tomrijndorp.find-it-faster"
+vscode "tonybaloney.vscode-pets"
 vscode "wix.vscode-import-cost"
 vscode "yrm.type-challenges"
