Add raycast, remove iterm, update zsh configs

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,4 +1,3 @@
-tap "derailed/k9s"
 tap "homebrew/bundle"
 tap "homebrew/cask-drivers"
 tap "homebrew/services"
@@ -37,35 +36,18 @@ cask "anydesk"
 cask "bruno"
 cask "calibre"
 cask "discord"
+cask "kitty"
 cask "qmk-toolbox"
 cask "raycast"
 cask "telegram"
 cask "vial"
 cask "zoom"
-vscode "aaron-bond.better-comments"
-vscode "adpyke.codesnap"
-vscode "christian-kohler.path-intellisense"
 vscode "dbaeumer.vscode-eslint"
 vscode "deque-systems.vscode-axe-linter"
 vscode "emmanuelbeziat.vscode-great-icons"
 vscode "enkia.tokyo-night"
 vscode "esbenp.prettier-vscode"
-vscode "formulahendry.auto-rename-tag"
-vscode "ms-playwright.playwright"
-vscode "ms-python.debugpy"
-vscode "ms-python.isort"
-vscode "ms-python.python"
-vscode "ms-python.vscode-pylance"
-vscode "ms-toolsai.jupyter"
-vscode "ms-toolsai.jupyter-keymap"
-vscode "ms-toolsai.jupyter-renderers"
-vscode "ms-toolsai.vscode-jupyter-cell-tags"
-vscode "ms-toolsai.vscode-jupyter-slideshow"
-vscode "ms-vscode.cpptools"
-vscode "ms-vscode.makefile-tools"
 vscode "orta.vscode-twoslash-queries"
 vscode "steoates.autoimport"
 vscode "tomrijndorp.find-it-faster"
-vscode "tonybaloney.vscode-pets"
-vscode "wix.vscode-import-cost"
 vscode "yrm.type-challenges"
