--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -3,7 +3,6 @@ tap "homebrew/cask-drivers"
 tap "homebrew/services"
 tap "osx-cross/arm"
 tap "osx-cross/avr"
-tap "oven-sh/bun"
 tap "qmk/qmk"
 brew "coreutils"
 brew "asdf"
@@ -15,12 +14,7 @@ brew "harfbuzz"
 brew "pango"
 brew "fzf"
 brew "git"
-brew "mysql"
-brew "neovim"
-brew "nginx"
 brew "node"
-brew "nvm"
-brew "pnpm"
 brew "ripgrep"
 brew "scrcpy"
 brew "starship"
@@ -29,25 +23,27 @@ brew "tree"
 brew "wget"
 brew "yarn"
 brew "zsh"
-brew "oven-sh/bun/bun"
 brew "qmk/qmk/qmk"
 cask "android-platform-tools"
 cask "anydesk"
 cask "bruno"
 cask "calibre"
 cask "discord"
+cask "font-jetbrains-mono"
 cask "kitty"
+cask "pearcleaner"
 cask "qmk-toolbox"
 cask "raycast"
 cask "telegram"
 cask "vial"
-cask "zoom"
+vscode "christian-kohler.path-intellisense"
 vscode "dbaeumer.vscode-eslint"
-vscode "deque-systems.vscode-axe-linter"
 vscode "emmanuelbeziat.vscode-great-icons"
 vscode "enkia.tokyo-night"
 vscode "esbenp.prettier-vscode"
+vscode "formulahendry.auto-rename-tag"
 vscode "orta.vscode-twoslash-queries"
 vscode "steoates.autoimport"
 vscode "tomrijndorp.find-it-faster"
+vscode "wix.vscode-import-cost"
 vscode "yrm.type-challenges"
