--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -26,6 +26,7 @@ brew "zsh"
 brew "qmk/qmk/qmk"
 cask "android-platform-tools"
 cask "anydesk"
+cask "brave-browser"
 cask "bruno"
 cask "calibre"
 cask "discord"
