--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,5 +1,4 @@
 tap "homebrew/bundle"
-tap "homebrew/cask-drivers"
 tap "homebrew/services"
 tap "osx-cross/arm"
 tap "osx-cross/avr"
@@ -21,7 +20,6 @@ brew "starship"
 brew "telnet"
 brew "tree"
 brew "wget"
-brew "yarn"
 brew "zsh"
 brew "qmk/qmk/qmk"
 cask "android-platform-tools"
@@ -31,12 +29,16 @@ cask "bruno"
 cask "calibre"
 cask "discord"
 cask "font-jetbrains-mono"
+cask "karabiner-elements"
 cask "kitty"
 cask "pearcleaner"
 cask "qmk-toolbox"
 cask "raycast"
+cask "spotify"
+cask "steam"
 cask "telegram"
 cask "vial"
+cask "visual-studio-code"
 vscode "christian-kohler.path-intellisense"
 vscode "dbaeumer.vscode-eslint"
 vscode "emmanuelbeziat.vscode-great-icons"
