--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -39,6 +39,7 @@ cask "steam"
 cask "telegram"
 cask "vial"
 cask "visual-studio-code"
+cask "vlc"
 cask "whatsapp"
 vscode "christian-kohler.path-intellisense"
 vscode "dbaeumer.vscode-eslint"
