--- a/mac/.mac_config
+++ b/mac/.mac_config
@@ -19,6 +19,8 @@ defaults write com.apple.dock "show-recents" -bool "false" && killall Dock
 
 defaults write com.apple.dock "tilesize" -int "36" && killall Dock
 
+defaults write com.apple.dock autohide-time-modifier -int 0;killall Dock # Make dock hide and show faster
+
 # Clock
 defaults write com.apple.menuextra.clock "DateFormat" -string "\"EEE d MMM HH:mm:ss\""
 
