--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -31,6 +31,7 @@ cask "discord"
 cask "font-jetbrains-mono"
 cask "karabiner-elements"
 cask "kitty"
+cask "nordvpn"
 cask "pearcleaner"
 cask "qmk-toolbox"
 cask "raycast"
