--- a/.config/kitty.conf
+++ b/.config/kitty.conf
@@ -2040,10 +2040,12 @@ map cmd+w       new_window
 #: Next window
 
 # map kitty_mod+] next_window
+map ctrl+l next_window
 
 #: Previous window
 
 # map kitty_mod+[ previous_window
+map ctrl+j previous_window
 
 #: Move window forward
 
