add wezterm, save keyboard changes

--- a/.config/kitty.conf
+++ b/.config/kitty.conf
@@ -2529,3 +2529,9 @@ map cmd+9 goto_tab 9
 
 #: }}}
 
+# map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i
+# map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /usr/local/bin/fzf --no-sort --no-mouse --exact -i --tac
+
+# map cmd+f launch --allow-remote-control kitty +kitten kitty_search/search.py @active-kitty-window-id
+
+map cmd+f      launch --location=vsplit --allow-remote-control kitty +kitten search.py @active-kitty-window-id
