--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -13,7 +13,6 @@ brew "harfbuzz"
 brew "pango"
 brew "fzf"
 brew "git"
-brew "node"
 brew "ripgrep"
 brew "scrcpy"
 brew "starship"
@@ -28,20 +27,28 @@ cask "brave-browser"
 cask "bruno"
 cask "calibre"
 cask "discord"
+cask "figma"
 cask "font-jetbrains-mono"
+cask "jabra-direct"
 cask "karabiner-elements"
 cask "kitty"
+cask "libreoffice"
+cask "microsoft-auto-update"
+cask "microsoft-teams"
 cask "nordvpn"
 cask "pearcleaner"
 cask "qmk-toolbox"
 cask "raycast"
+cask "reflex"
 cask "spotify"
 cask "steam"
 cask "telegram"
 cask "vial"
 cask "visual-studio-code"
 cask "vlc"
+cask "wezterm"
 cask "whatsapp"
+cask "zoom"
 vscode "christian-kohler.path-intellisense"
 vscode "dbaeumer.vscode-eslint"
 vscode "emmanuelbeziat.vscode-great-icons"
