improve config: wezterm, zsh. Save new brew packages

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -3,16 +3,20 @@ tap "homebrew/services"
 tap "osx-cross/arm"
 tap "osx-cross/avr"
 tap "qmk/qmk"
-brew "coreutils"
 brew "asdf"
+brew "icu4c@76"
 brew "bat"
+brew "coreutils"
 brew "curl"
 brew "eza"
 brew "fd"
 brew "harfbuzz"
 brew "pango"
+brew "fnm"
 brew "fzf"
 brew "git"
+brew "pnpm"
+brew "postgresql@17"
 brew "ripgrep"
 brew "scrcpy"
 brew "starship"
@@ -26,9 +30,12 @@ cask "anydesk"
 cask "brave-browser"
 cask "bruno"
 cask "calibre"
+cask "dbeaver-community"
 cask "discord"
 cask "figma"
+cask "firefox"
 cask "font-jetbrains-mono"
+cask "freecad"
 cask "jabra-direct"
 cask "karabiner-elements"
 cask "kitty"
